fix question title word break on profile page

--- a/styles/pages/profil.module.css
+++ b/styles/pages/profil.module.css
@@ -122,8 +122,11 @@
 
 .activities li {
   padding: 10px 0;
-  word-break: break-all;
   animation: fadeIn 200ms ease-out forwards;
+}
+
+.activities li a {
+  word-break: break-all;
 }
 
 .activities li a,
